# CVPR2026-EnAR

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
examples/: reconstruct_and_answer.py
internvl/model/: __init__.py
internvl/model/internlm2/: configuration_internlm2.py  modeling_internlm2.py  tokenization_internlm2.py  tokenization_internlm2_fast.py
internvl/model/internvl_chat/: __init__.py  configuration_intern_vit.py  configuration_internvl_chat.py  conversation.py  modeling_intern_vit.py  modeling_intern_vit_lx.py  modeling_internvl_chat.py
internvl/model/phi3/: configuration_phi3.py  modeling_phi3.py
src/express_cvpr/: internvl_runner.py  preprocess.py  reconstruction.py
